revmoed more code

--- a/gpt2-finetune/components/environment/Dockerfile
+++ b/gpt2-finetune/components/environment/Dockerfile
@@ -1,6 +1,5 @@
 FROM mcr.microsoft.com/azureml/curated/acpt-pytorch-1.11-py38-cuda11.3-gpu:1
 
-RUN python -m pip install accelerate \
-                          datasets \
+RUN python -m pip install datasets \
                           optimum \
                           transformers
