changed to acpt

--- a/distilbert-finetune/components/environment/Dockerfile
+++ b/distilbert-finetune/components/environment/Dockerfile
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/azureml/curated/acpt-pytorch-1.11-py38-cuda11.3-gpu:1
+FROM mcr.microsoft.com/azureml/aifx/stable-ubuntu2004-cu115-py38-torch1110:latest
 
 RUN python -m pip install datasets \
                           optimum \
