--- a/distilbert-finetune/components/environment/Dockerfile
+++ b/distilbert-finetune/components/environment/Dockerfile
@@ -1,5 +1,6 @@
 FROM  mcr.microsoft.com/azureml/curated/acpt-pytorch-1.11-py38-cuda11.3-gpu:1
 
-RUN python -m pip install datasets \
+RUN python -m pip install accelerate \
+                          datasets \
                           optimum \
                           transformers
